force-app/main/default/objects/Bundle_Option__c/Bundle_Option__c.object-meta.xml
<CustomObject>
    <description>Links an option product to a bundle product, defining selection behavior</description>
    <label>Bundle Option</label>
    <nameField>
        <displayFormat>BO-{00000}</displayFormat>
        <label>Bundle Option Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bundle Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>