force-app/main/default/objects/Bundle_Option__c/fields/Default_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Default_Quantity__c</fullName>
    <inlineHelpText>Default quantity when added.</inlineHelpText>
    <label>Default Quantity</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>