force-app/main/default/objects/Bundle_Option__c/fields/Feature__c.field-meta.xml
<CustomField>
    <fullName>Feature__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Which feature group does this option belong to? If blank, appears in &quot;Other Options&quot;.</inlineHelpText>
    <label>Feature</label>
    <referenceTo>Bundle_Feature__c</referenceTo>
    <relationshipLabel>Feature Options</relationshipLabel>
    <relationshipName>Feature_Options</relationshipName>
    <type>Lookup</type>
</CustomField>