force-app/main/default/objects/Bundle_Option__c/fields/Is_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, this option is automatically selected and cannot be deselected.</inlineHelpText>
    <label>Is Required</label>
    <type>Checkbox</type>
</CustomField>