force-app/main/default/objects/Bundle_Option__c/fields/Is_Selected__c.field-meta.xml
<CustomField>
    <fullName>Is_Selected__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Pre-select this option by default in the Bundle.</inlineHelpText>
    <label>Is Selected</label>
    <type>Checkbox</type>
</CustomField>