force-app/main/default/objects/Bundle_Option__c/fields/Min_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Min_Quantity__c</fullName>
    <inlineHelpText>Minimum quantity allowed for this option.</inlineHelpText>
    <label>Min Quantity</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>