force-app/main/default/objects/Bundle_Option__c/fields/Option_Product__c.field-meta.xml
<CustomField>
    <fullName>Option_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The option (child) product.</inlineHelpText>
    <label>Option Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Included In Bundles</relationshipLabel>
    <relationshipName>Included_In_Bundles</relationshipName>
    <type>Lookup</type>
</CustomField>