force-app/main/default/objects/Bundle_Option__c/fields/Option_Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Option_Product_Family__c</fullName>
    <formula>TEXT(Option_Product__r.Family)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <inlineHelpText>Pulled from the related Option Product. Read-only context for admins configuring the bundle option.</inlineHelpText>
    <label>Option Product Family</label>
    <type>Text</type>
</CustomField>