force-app/main/default/objects/Bundle_Option__c/fields/Option_Type__c.field-meta.xml
<CustomField>
    <fullName>Option_Type__c</fullName>
    <inlineHelpText>Component: qty scales with bundle qty.
Accessory: fixed qty.
Related Product: qty independent.</inlineHelpText>
    <label>Option Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Component</fullName>
            </value>
            <value>
                <fullName>Accessory</fullName>
            </value>
            <value>
                <fullName>Related Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>