force-app/main/default/objects/Bundle_Option__c/fields/Quantity_Editable__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Editable__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Can the sales rep change the quantity of this option?</inlineHelpText>
    <label>Quantity Editable</label>
    <type>Checkbox</type>
</CustomField>