force-app/main/default/objects/Bundle_Option__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <inlineHelpText>Order within the feature. Use increments of 10.</inlineHelpText>
    <label>Sort Order</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>